# Dynamic_Interpolation_iLQR

./: .gitignore  CMakeLists.txt  README.md  main.cpp  matrices_B.csv  savedControls.csv  savedStates.csv
STOMP/: STOMP.cpp  STOMP.h
Testing_Data/Copying/: Pendulum_Data.csv  Pushing_Data.csv  Reaching_Data.csv
Testing_Data/Dynamic_Linear_Interpolation/: Pendulum_Data.csv  Pushing_Data.csv  Reaching_Data.csv
Testing_Data/Linear_Interpolation/: Pendulum_Data.csv  Pushing_Data.csv  Reaching_Data.csv
Testing_Data/StartAndGoalStates/: Pendulum.csv  Pushing.csv  Reaching.csv
Utility/MujocoController/: MujocoController.cpp  MujocoController.h  MujocoUI.cpp  MujocoUI.h
Utility/savingData/: saveData.cpp  saveData.h
Utility/stdInclude/: stdInclude.h
franka_emika/: Acrobot.xml  object_pushing.xml  reaching.xml
franka_emika/assets/: actuator0.xml  chain0.xml  gripper_assets.xml  table.xml
franka_emika/franka_emika_panda/: panda.xml  pushing_scene.xml
franka_emika/saved Things Ive changed/: chain0.xml
iLQR/: iLQR_dataCentric.cpp  iLQR_dataCentric.h
modelTranslator/: boxFlickTask.cpp  cheezitPushingTask.cpp  cylinderPushingTask.cpp  doublePendulum.cpp  modelTranslator.cpp  modelTranslator.h  objectPushingTask.cpp  objectReachingTask.cpp  reachingTask.cpp
models/new_model/: panda.xml  pushing_scene.xml
models/old_model/: franka_panda.xml  object_pushing.xml  pushing_clutter.xml  reaching_through_clutter.xml
models/old_model/assets/: actuator0.xml  assets.xml  gripper_assets.xml
mujoco/include/: libmujoco.so.2.3.0  mjdata.h  mjmodel.h  mjplugin.h  mjrender.h  mjvisualize.h  mujoco.h
